demo/infrastructure/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - host: bootcamp.kube.daniel
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-bootcamp
          servicePort: 8080

  - host: echo.kube.daniel
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8080

  - host: todo.kube.daniel
    http:
      paths:
      - path: /
        backend:
          serviceName: todo-frontend
          servicePort: 80
      - path: /api
        backend:
          serviceName: todo-backend
          servicePort: 8080
